feat: add "POST /services"
